--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -31,7 +31,9 @@
     <string name="appbar_left_info">菜单</string>
     <string name="appbar_left_menu_1">添加、删除与切换课程表</string>
     <string name="appbar_left_menu_2">在该课程表添加课程</string>
+    <string name="appbar_left_menu_3">删除Cookie</string>
     <string name="activity_info_edit_btn">删除该课程</string>
+    <string name="activity_info_edit_hint">write some notes!</string>
     <string name="activity_list_btn">添加</string>
 
     <string name="item_schedule_name_default">2019 第一学期</string>
